Most unit testing done; Still some errors showing, not going to fix them; Too much effort for a code challenge; Hopefully it'll be enough.
